<resources>
    <string name="app_name">Just Java</string>
    <string name="toppings">toppings</string>
    <string name="whipped">Whipped cream</string>
    <string name="quantity">quantity</string>
    <string name="ordersummary">order summary</string>
    <string name="order">Order</string>
    <string name="choco">Chocolate</string>
    <string name="name_hint">Name</string>
    <string name="order_summary_name">Name: </string>
    <string name="quantity_java">Quantity: </string>
    <string name="whipped_java">Add whipped cream? </string>
    <string name="choco_java">Add chocolate? </string>
    <string name="total_java">Total: $</string>
    <string name="thank_java">Thank you!</string>
    <string name="yes">Уes</string>
    <string name="no">No</string>
</resources>