<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.justjava.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/CustomerName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/name_hint"
            android:inputType="textCapWords"/>
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/toppings"/>
        <CheckBox
            android:id="@+id/checkbox_whip"
            style="@style/checkbox"
            android:text="@string/whipped"/>
        <CheckBox
            android:id="@+id/checkbox_choc"
            style="@style/checkbox"
            android:text="@string/choco"/>
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/quantity"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:onClick="decrement"
                style="@style/buttons"
                android:text="-"/>
            <TextView
                android:id="@+id/quantity_text_view"
                style="@style/body"
                android:textColor="#000000"
                android:text="0"/>
            <Button
                android:id="@+id/increment"
                style="@style/buttons"
                android:onClick="increment"
                android:text="+"/>
        </LinearLayout>
        <!--<TextView-->
            <!--style="@style/HeaderTextStyle"-->
            <!--android:text="@string/ordersummary"/>-->
        <!--<TextView-->
            <!--style="@style/body"-->
            <!--android:id="@+id/order_summary_text_view"-->
             <!--android:text="$0"/>-->
        <Button
            style="@style/body"
            android:text="@string/order"
            android:onClick="submitOrder"/>
    </LinearLayout>
</ScrollView>
